--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'java'
-
+defaultTasks 'jar'
 jar {
     manifest {
-        attributes {
-            'Main-Class' : 'AntLabMain.java'
+        attributes(
+            'Main-Class' : 'AntLabMain',
             'Class-Path' : 'M2.src.main.java.edu.gatech.oad.AntLab.pkg1.AntLabMain.java'
-        }
+        )
 
     }
 }
 
 dependencies {
-
+    compile fileTree(dir: 'src', include: '*.java')
 }
