Fix typo in the Main class attribute

--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,10 @@ defaultTasks 'jar'
 
 jar {
     manifest {
-        attributes(
-            'Main-Class' : 'edu.gatech.oad.AntLab.pkg1.AntLabMain',
+
+        attributes
+            'Main-Class' : 'edu.gatech.oad.antlab.pkg1.AntLabMain',
             'Class-Path' : 'libs/src/main/java/edu/gatech/oad/AntLab/pkg1/AntLabMain.java'
-        )
 
     }
 }
