--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ jar {
 
         attributes(
             'Main-Class' : 'edu.gatech.oad.antlab.pkg1.AntLabMain',
-            'Class-Path' : 'libs/src/main/java/edu/gatech/oad/AntLab/pkg1/AntLabMain.java'
+            'Class-Path' : '../../lib/resources.jar'
         )
     }
 }
